feat: add functionality to service detail pages 'make a query' button

--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -108,9 +108,9 @@
                             <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
                         </button>
                         <div class="col-1"></div>
-                        <button type="button" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
+                        <a href="#query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
                             <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
-                        </button>
+                        </a>
                         <div class="col-1"></div>
                     </div>
                 </div>
@@ -125,8 +125,11 @@
             </div>
             </div>
         </div>
+        <!-- Make a Query -->
         <div class="row mt-5 p-5 blue-gradient justify-content-center">
             <form class="col-10 col-lg-9 col-xxl-7">
+                <h2 id="query">MAKE A QUERY ABOUT CONCRETE CORING</h2>
+                <hr>
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Topic of Query</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1" value="Concrete Coring">
