--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -104,9 +104,9 @@
                     <p class="pb-3 pt-5 pt-xl-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
                         <div class="col-1"></div>
-                        <button type="button" class="col-12 btn btn-lg btn-primary CIK-button">
+                        <a href="tel:555-555-5555" class="col-12 btn btn-lg btn-primary CIK-button">
                             <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
-                        </button>
+                        </a>
                         <div class="col-1"></div>
                         <a href="#query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
                             <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
