--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -96,12 +96,12 @@
                 <div class="text-center px-5">
                     <h2 class="mt-3 pt-5 pt-xl-0">Concrete Coring</h2>
                     <hr>
-                    <p class="pb-5 pb-xl-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p class="pb-5 pb-xl-3 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 </div>
                 <!-- second half -->
                 <div class="flex-fill d-flex flex-column white justify-content-center text-center px-5">
-                    <p class="pb-3 pt-5 pt-xl-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                    <p class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
                         <div class="col-1"></div>
                         <a href="tel:555-555-5555" class="col-12 btn btn-lg btn-primary CIK-button">
@@ -116,7 +116,7 @@
                 </div>
             </div>
             <!-- right image column (drives the row height) -->
-            <div class="d-none d-xl-block col-6 px-0 align-content-center">
+            <div class="d-none service-box-right d-xl-block col-6 px-0 align-content-center">
                 <img
                 src="../assets/images/PrellerProvidedPhotos/Coring/coring-5.jpeg"
                 class="img-fluid w-100"
