--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <!-- Toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
@@ -19,7 +21,6 @@
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
     <script src="https://kit.fontawesome.com/cd5674c3b8.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="../assets/js/headManager.js"></script>
 </head>
 <body class="d-flex flex-column min-vh-100">
     <!-- Header -->
@@ -101,7 +102,7 @@
                 </div>
                 <!-- second half -->
                 <div class="flex-fill d-flex flex-column white justify-content-center text-center px-5">
-                    <p class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                    <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
                         <div class="col-1"></div>
                         <a href="tel:555-555-5555" class="col-12 btn btn-lg btn-primary CIK-button">
@@ -119,7 +120,7 @@
             <div class="d-none service-box-right d-xl-block col-6 px-0 align-content-center">
                 <img
                 src="../assets/images/PrellerProvidedPhotos/Coring/coring-5.jpeg"
-                class="img-fluid w-100"
+                class="img-fluid h-100 service-image"
                 alt="..."
                 />
             </div>
@@ -131,19 +132,23 @@
                 <h2 id="query">MAKE A QUERY ABOUT CONCRETE CORING</h2>
                 <hr>
                 <div class="form-group">
-                    <label for="exampleFormControlInput1">Topic of Query</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" value="Concrete Coring">
+                    <label for="queryTopic">Topic of Query</label>
+                    <input required type="text" name="" class="form-control" id="queryTopic" value="Concrete Coring">
                 </div>
                 <div class="form-group">
-                    <label for="exampleFormControlInput1">Your Email address</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
+                    <label for="queryEmail">Your Email address</label>
+                    <input required type="email" name="queryEmail" class="form-control" id="queryEmail">
                 </div>
                 <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Details of Your Query</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
+                    <label for="queryText">Details of Your Query</label>
+                    <textarea required class="form-control" name="queryText" id="queryText" rows="8"></textarea>
                 </div>
                 <div class="row px-2">
-                    <input type="submit" value="Send Request" class="btn btn-success mt-3 CIK-button"/>
+                    <input 
+                        id="query-submit"
+                        type="submit" 
+                        value="Send Request" 
+                        class="btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
         </div>
@@ -167,5 +172,6 @@
     <!-- Post-DOM Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script type="module" src="../assets/js/script.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
