--- a/contact-us.html
+++ b/contact-us.html
@@ -5,15 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Concrete Insight UK</title>
     <link rel="icon" type="image/x-icon" href="/assets//images/s-preller-favicon.png">
-    <link href="../assets/style.css" rel="stylesheet">
+    <link href="assets/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <!-- Toastify -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
@@ -37,13 +35,13 @@
             <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item mx-1">
-                        <a class="nav-link p-3" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link active p-3" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown mx-1 hover-underline-animation">
-                    <a class="nav-link dropdown-toggle p-3 active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
+                    <a class="nav-link dropdown-toggle p-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item active" href="/service-pages/intrusive-investigations.html">Concrete Coring</a></li>
+                        <li><a class="dropdown-item" href="service-pages/intrusive-investigations.html">Concrete Coring</a></li>
                         <li><a class="dropdown-item" href="#">Dust Sampling</a></li>
                         <li><a class="dropdown-item" href="#">Conrete Breakouts</a></li>
                         <li><a class="dropdown-item" href="#">Pull Testing</a></li>
@@ -87,74 +85,69 @@
             </div>
         </div>
     </nav>
-    <div class="row justify-content-center service-background pt-5">
-        <div class="col-10 col-lg-9 col-xxl-7 service-box">
-            <div class="row align-items-stretch">
-            <!-- left column split vertically -->
-            <div class="col-12 col-xl-6 px-0 d-flex flex-column">
-                <!-- first half -->
-                <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
-                <div class="text-center px-5">
-                    <h2 class="mt-3 pt-5 pt-xl-0">Concrete Coring</h2>
-                    <hr>
-                    <p class="pb-5 pb-xl-3 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                </div>
-                <!-- second half -->
-                <div class="flex-fill d-flex flex-column white justify-content-center text-center px-5">
-                    <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <div class="row justify-content-evenly pb-5 pb-lg-3">
-                        <div class="col-1"></div>
-                        <a href="tel:555-555-5555" class="col-12 btn btn-lg btn-primary CIK-button">
-                            <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
-                        </a>
-                        <div class="col-1"></div>
-                        <a href="#query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
-                            <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
-                        </a>
-                        <div class="col-1"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- right image column (drives the row height) -->
-            <div class="d-none service-box-right d-xl-block col-6 px-0 align-content-center">
-                <img
-                src="../assets/images/PrellerProvidedPhotos/Coring/coring-5.jpeg"
-                class="img-fluid h-100 service-image"
-                alt="..."
-                />
-            </div>
-            </div>
-        </div>
-        <!-- Make a Query -->
-        <div class="row mt-5 p-5 blue-gradient justify-content-center">
-            <form class="col-10 col-lg-9 col-xxl-7">
-                <h2 id="query">MAKE A QUERY ABOUT CONCRETE CORING</h2>
+    <!-- Main Page -->
+    <div class="contact-us-background">
+        <div class="row my-5 justify-content-center">
+            <div class="d-block d-xxl-none col-1"></div>
+            <div class="col-10 col-xxl-5 contact-us-box p-3 p-xl-5 text-center">
+                <h2 class="pt-3">CONTACT US</h2>
                 <hr>
-                <div class="form-group">
-                    <label for="queryTopic">Topic of Query</label>
-                    <input required type="text" name="" class="form-control" id="queryTopic" value="Concrete Coring">
-                </div>
-                <div class="form-group">
-                    <label for="queryEmail">Your Email address</label>
-                    <input required type="email" name="queryEmail" class="form-control" id="queryEmail">
-                </div>
-                <div class="form-group">
-                    <label for="queryText">Details of Your Query</label>
-                    <textarea required class="form-control" name="queryText" id="queryText" rows="8"></textarea>
-                </div>
-                <div class="row px-2">
-                    <input 
-                        id="query-submit"
-                        type="submit" 
-                        value="Send Request" 
-                        class="btn btn-success mt-3 CIK-button"/>
-                </div>
-            </form>
+                <ul class="fa-ul contact-ul">
+                    <li><span class="fa-li"><i class="fa-solid fa-phone fa-2xl"></i></span>
+                        <a href="tel:555-555-5555" class="btn btn-lg btn-success">555-555-555</a>
+                    </li>
+                    <li><span class="fa-li"><i class="fa-solid fa-envelope fa-2xl"></i></span>
+                        <a href="tel:555-555-5555" class="btn btn-lg btn-primary">example@inbox</a>
+                    </li>
+                    <li><span class="fa-li"><i class="fa-brands fa-square-facebook fa-2xl"></i></span>
+                        <a href="tel:555-555-5555" class="btn btn-lg btn-warning">@concrete-insight-uk</a>
+                    </li>
+                    <li><span class="fa-li"><i class="fa-brands fa-google fa-xl"></i></span>
+                        <a href="tel:555-555-5555" class="btn btn-lg btn-danger">@concrete-insight-uk</a>
+                    </li>
+                    <li><span class="fa-li"><i class="fa-brands fa-square-instagram fa-2xl"></i></span>
+                        <a href="tel:555-555-5555" class="btn btn-lg btn-secondary">@concrete-insight-uk</a>
+                    </li>
+                </ul>
+                <h3 class="pt-5">AREAS WE COVER</h3>
+                <hr>
+                <ul class="contact-ul pt-3">
+                    <li><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Sussex</li><br />
+                    <li><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Surrey</li><br />
+                    <li><i class="fa-solid fa-plus fa-2xl"></i>&emsp;London</li><br />
+                </ul>
+            </div>
+            <div class="col-1"></div>
+            <div class="col-10 col-xxl-5 contact-us-box p-3 p-xl-5 mt-5 mt-xxl-0">
+                <h2 id="query" class="pt-3">MAKE A QUERY</h2>
+                <hr>
+                <form>
+                    <div class="form-group">
+                        <label for="queryTopic">Topic of Query</label>
+                        <input required type="text" name="" class="form-control" id="queryTopic">
+                    </div>
+                    <div class="form-group">
+                        <label for="queryEmail">Your Email address</label>
+                        <input required type="email" name="queryEmail" class="form-control" id="queryEmail">
+                    </div>
+                    <div class="form-group">
+                        <label for="queryText">Details of Your Query</label>
+                        <textarea required class="form-control" name="queryText" id="queryText" rows="8"></textarea>
+                    </div>
+                    <div class="row px-2">
+                        <input 
+                            id="query-submit"
+                            type="submit" 
+                            value="Send Request" 
+                            class="btn btn-success mt-3 CIK-button"/>
+                    </div>
+                </form>
+            </div>
+            <!-- <div class="col-1"></div> -->
         </div>
     </div>
     <!-- Map and Footer -->
-    <div id="map"></div>
+    <div id="map" class="border-top"></div>
     <footer class="d-flex flex-wrap justify-content-evenly align-items-center py-4 border-top">
         <div class="col-4 d-flex align-items-center">
         <span class="text-muted">© 2025 Concrete Insight UK
@@ -171,7 +164,6 @@
     </footer>
     <!-- Post-DOM Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <script type="module" src="../assets/js/script.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script type="module" src="assets/js/script.js"></script>
 </body>
 </html>
