feat: change locations section to availibility on contact us page

--- a/contact-us.html
+++ b/contact-us.html
@@ -89,36 +89,36 @@
     <div class="contact-us-background">
         <div class="row my-5 justify-content-center">
             <div class="d-block d-xxl-none col-1"></div>
-            <div class="col-10 col-xxl-5 contact-us-box p-3 p-xl-5 text-center">
+            <div class="col-10 col-xxl-5 contact-us-box p-3 p-sm-4 p-md-5 text-center">
                 <h2 class="pt-3">CONTACT US</h2>
                 <hr>
-                <ul class="fa-ul contact-ul">
+                <ul class="fa-ul contact-ul contact-ul-spacing">
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-2xl"></i></span>
                         <a href="tel:555-555-5555" class="btn btn-lg btn-success">555-555-555</a>
                     </li>
                     <li><span class="fa-li"><i class="fa-solid fa-envelope fa-2xl"></i></span>
-                        <a href="tel:555-555-5555" class="btn btn-lg btn-primary">example@inbox</a>
+                        <a href="tel:555-555-5555" class="btn btn-lg btn-primary">Concreteinsightuk@outlook.com</a>
                     </li>
                     <li><span class="fa-li"><i class="fa-brands fa-square-facebook fa-2xl"></i></span>
-                        <a href="tel:555-555-5555" class="btn btn-lg btn-warning">@concrete-insight-uk</a>
+                        <a href="tel:555-555-5555" class="btn btn-lg btn-primary">@concrete-insight-uk</a>
                     </li>
                     <li><span class="fa-li"><i class="fa-brands fa-google fa-xl"></i></span>
-                        <a href="tel:555-555-5555" class="btn btn-lg btn-danger">@concrete-insight-uk</a>
+                        <a href="tel:555-555-5555" class="btn btn-lg btn-primary">@concrete-insight-uk</a>
                     </li>
                     <li><span class="fa-li"><i class="fa-brands fa-square-instagram fa-2xl"></i></span>
-                        <a href="tel:555-555-5555" class="btn btn-lg btn-secondary">@concrete-insight-uk</a>
+                        <a href="tel:555-555-5555" class="btn btn-lg btn-primary">@concrete-insight-uk</a>
                     </li>
                 </ul>
-                <h3 class="pt-5">AREAS WE COVER</h3>
+                <h3 class="pt-5">AVAILABILITY</h3>
                 <hr>
-                <ul class="contact-ul pt-3">
-                    <li><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Sussex</li><br />
-                    <li><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Surrey</li><br />
-                    <li><i class="fa-solid fa-plus fa-2xl"></i>&emsp;London</li><br />
-                </ul>
+                <p class="text-start">
+                    We operate in Sussex county, but also work in London, Surrey, Hampshire and Kent. 
+                    When we can help you depends on our current schedule. If you are unsure about your area, 
+                    or want to know when we can help with your issue, simply submit a query or call us. 
+                </p>
             </div>
             <div class="col-1"></div>
-            <div class="col-10 col-xxl-5 contact-us-box p-3 p-xl-5 mt-5 mt-xxl-0">
+            <div class="col-10 col-xxl-5 contact-us-box p-3 p-sm-4 p-md-5 mt-5 mt-xxl-0">
                 <h2 id="query" class="pt-3">MAKE A QUERY</h2>
                 <hr>
                 <form>
