--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -94,14 +94,14 @@
             <div class="col-12 col-xl-6 px-0 d-flex flex-column">
                 <!-- first half -->
                 <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
-                <div class="text-center px-5">
+                <div class="text-center px-4 px-md-5">
                     <h2 class="mt-3 pt-5 pt-xl-0">Concrete Coring</h2>
                     <hr>
                     <p class="pb-5 pb-xl-3 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 </div>
                 <!-- second half -->
-                <div class="flex-fill d-flex flex-column white justify-content-center text-center px-5">
+                <div class="flex-fill d-flex flex-column white justify-content-center text-center px-4 px-md-5">
                     <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
                         <div class="col-1"></div>
@@ -127,7 +127,7 @@
             </div>
         </div>
         <!-- Make a Query -->
-        <div class="row mt-5 p-5 blue-gradient justify-content-center">
+        <div class="row mt-5 py-5 px-2 px-sm-4 px-md-5 blue-gradient justify-content-center">
             <form class="col-10 col-lg-9 col-xxl-7">
                 <h2 id="query">MAKE A QUERY ABOUT CONCRETE CORING</h2>
                 <hr>
