--- a/contact-us.html
+++ b/contact-us.html
@@ -12,6 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+     crossorigin=""/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
@@ -94,19 +98,29 @@
                 <hr>
                 <ul class="fa-ul contact-ul contact-ul-spacing">
                     <li><span class="fa-li"><i class="fa-solid fa-phone fa-2xl"></i></span>
-                        <a href="tel:555-555-5555" class="btn btn-lg btn-success">555-555-555</a>
+                        <a href="tel:555-555-5555" 
+                           class="btn btn-success px-3 py-1 px-lg-4 py-lg-2 fs-5 fs-lg-4">555-555-555
+                        </a>
                     </li>
                     <li><span class="fa-li"><i class="fa-solid fa-envelope fa-2xl"></i></span>
-                        <a href="tel:555-555-5555" class="btn btn-lg btn-primary">Concreteinsightuk@outlook.com</a>
+                        <a href="tel:555-555-5555" 
+                           class="btn btn-primary px-3 py-1 px-lg-4 py-lg-2 fs-5 fs-lg-4 text-break">concreteinsightuk@outlook.com
+                    </a>
                     </li>
                     <li><span class="fa-li"><i class="fa-brands fa-square-facebook fa-2xl"></i></span>
-                        <a href="tel:555-555-5555" class="btn btn-lg btn-primary">@concrete-insight-uk</a>
+                        <a href="tel:555-555-5555" 
+                           class="btn btn-primary px-3 py-1 px-lg-4 py-lg-2 fs-5 fs-lg-4">@concrete-insight-uk
+                        </a>
                     </li>
                     <li><span class="fa-li"><i class="fa-brands fa-google fa-xl"></i></span>
-                        <a href="tel:555-555-5555" class="btn btn-lg btn-primary">@concrete-insight-uk</a>
+                        <a href="tel:555-555-5555" 
+                           class="btn btn-primary px-3 py-1 px-lg-4 py-lg-2 fs-5 fs-lg-4">@concrete-insight-uk
+                        </a>
                     </li>
                     <li><span class="fa-li"><i class="fa-brands fa-square-instagram fa-2xl"></i></span>
-                        <a href="tel:555-555-5555" class="btn btn-lg btn-primary">@concrete-insight-uk</a>
+                        <a href="tel:555-555-5555" 
+                           class="btn btn-primary px-3 py-1 px-lg-4 py-lg-2 fs-5 fs-lg-4">@concrete-insight-uk
+                        </a>
                     </li>
                 </ul>
                 <h3 class="pt-5">AVAILABILITY</h3>
@@ -164,6 +178,7 @@
     </footer>
     <!-- Post-DOM Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <script type="module" src="assets/js/script.js"></script>
+    <script type="module" src="../assets/js/script.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
