feat: add service details to intrusive investigations page

--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -110,7 +110,7 @@
                             <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
                         </a>
                         <div class="col-1"></div>
-                        <a href="#query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
+                        <a href="#concrete-coring-query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
                             <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
                         </a>
                         <div class="col-1"></div>
@@ -130,7 +130,7 @@
         <!-- Make a Query -->
         <div class="row mt-5 py-5 px-2 px-sm-4 px-md-5 blue-gradient justify-content-center">
             <form class="col-10 col-lg-9 col-xxl-7">
-                <h2 id="query">MAKE A QUERY ABOUT CONCRETE CORING</h2>
+                <h2 id="concrete-coring-query">MAKE A QUERY ABOUT CONCRETE CORING</h2>
                 <hr>
                 <div class="form-group">
                     <label for="queryTopic">Topic of Query</label>
@@ -186,7 +186,7 @@
                             <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
                         </a>
                         <div class="col-1"></div>
-                        <a href="#query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
+                        <a href="#dust-sampling-query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
                             <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
                         </a>
                         <div class="col-1"></div>
@@ -198,11 +198,11 @@
         <!-- Make a Query -->
         <div class="row mt-5 py-5 px-2 px-sm-4 px-md-5 blue-gradient justify-content-center">
             <form class="col-10 col-lg-9 col-xxl-7">
-                <h2 id="query">MAKE A QUERY ABOUT CONCRETE CORING</h2>
+                <h2 id="dust-sampling-query">MAKE A QUERY ABOUT DUST SAMPLING</h2>
                 <hr>
                 <div class="form-group">
                     <label for="queryTopic">Topic of Query</label>
-                    <input required type="text" name="" class="form-control" id="queryTopic" value="Concrete Coring">
+                    <input required type="text" name="" class="form-control" id="queryTopic" value="Dust Sampling">
                 </div>
                 <div class="form-group">
                     <label for="queryEmail">Your Email address</label>
@@ -230,7 +230,7 @@
                 <!-- first half -->
                 <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
                 <div class="text-center px-4 px-md-5">
-                    <h2 class="mt-3 pt-5 pt-xl-0">Concrete Coring</h2>
+                    <h2 class="mt-3 pt-5 pt-xl-0">Concrete Breakouts</h2>
                     <hr>
                     <p class="pb-5 pb-xl-3 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
@@ -244,7 +244,7 @@
                             <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
                         </a>
                         <div class="col-1"></div>
-                        <a href="#query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
+                        <a href="#concrete-breakouts-query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
                             <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
                         </a>
                         <div class="col-1"></div>
@@ -254,7 +254,7 @@
             <!-- right image column (drives the row height) -->
             <div class="d-none service-box-right d-xl-block col-6 px-0 align-content-center">
                 <img
-                src="../assets/images/PrellerProvidedPhotos/Coring/coring-5.jpeg"
+                src="../assets/images/PrellerProvidedPhotos/Breakouts/breakouts-5.jpeg"
                 class="img-fluid h-100 service-image"
                 alt="..."
                 />
@@ -264,11 +264,78 @@
         <!-- Make a Query -->
         <div class="row mt-5 py-5 px-2 px-sm-4 px-md-5 blue-gradient justify-content-center">
             <form class="col-10 col-lg-9 col-xxl-7">
-                <h2 id="query">MAKE A QUERY ABOUT CONCRETE CORING</h2>
+                <h2 id="concrete-breakouts-query">MAKE A QUERY ABOUT CONCRETE BREAKOUTS</h2>
                 <hr>
                 <div class="form-group">
                     <label for="queryTopic">Topic of Query</label>
-                    <input required type="text" name="" class="form-control" id="queryTopic" value="Concrete Coring">
+                    <input required type="text" name="" class="form-control" id="queryTopic" value="Concrete Breakouts">
+                </div>
+                <div class="form-group">
+                    <label for="queryEmail">Your Email address</label>
+                    <input required type="email" name="queryEmail" class="form-control" id="queryEmail">
+                </div>
+                <div class="form-group">
+                    <label for="queryText">Details of Your Query</label>
+                    <textarea required class="form-control" name="queryText" id="queryText" rows="8"></textarea>
+                </div>
+                <div class="row px-2">
+                    <input 
+                        id="query-submit"
+                        type="submit" 
+                        value="Send Request" 
+                        class="btn btn-success mt-3 CIK-button"/>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="row justify-content-center service-background pt-5">
+        <div class="col-10 col-lg-9 col-xxl-7 service-box">
+        <div class="row align-items-stretch">
+            <!-- RIGHT column becomes FIRST -->
+            <div class="d-none d-xl-block col-6 px-0 service-box-right">
+            <img
+                src="../assets/images/view-deserted-decaying-house-nature.jpg"
+                class="img-fluid h-100 service-image"
+                alt="…"
+            />
+            </div>
+
+            <!-- TEXT column now on the right -->
+            <div class="col-12 col-xl-6 px-0 d-flex flex-column">
+                <!-- first half -->
+                <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
+                <div class="text-center px-4 px-md-5">
+                    <h2 class="mt-3 pt-5 pt-xl-0">Pull Testing</h2>
+                    <hr>
+                    <p class="pb-5 pb-xl-3 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                </div>
+                <!-- second half -->
+                <div class="flex-fill d-flex flex-column white justify-content-center text-center px-4 px-md-5">
+                    <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                    <div class="row justify-content-evenly pb-5 pb-lg-3">
+                        <div class="col-1"></div>
+                        <a href="tel:555-555-5555" class="col-12 btn btn-lg btn-primary CIK-button">
+                            <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
+                        </a>
+                        <div class="col-1"></div>
+                        <a href="#pull-testing-query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
+                            <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
+                        </a>
+                        <div class="col-1"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <!-- Make a Query -->
+        <div class="row mt-5 py-5 px-2 px-sm-4 px-md-5 blue-gradient justify-content-center">
+            <form class="col-10 col-lg-9 col-xxl-7">
+                <h2 id="pull-testing-query">MAKE A QUERY ABOUT PULL TESTING</h2>
+                <hr>
+                <div class="form-group">
+                    <label for="queryTopic">Topic of Query</label>
+                    <input required type="text" name="" class="form-control" id="queryTopic" value="Pull Testing">
                 </div>
                 <div class="form-group">
                     <label for="queryEmail">Your Email address</label>
@@ -296,7 +363,7 @@
                 <!-- first half -->
                 <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
                 <div class="text-center px-4 px-md-5">
-                    <h2 class="mt-3 pt-5 pt-xl-0">Concrete Coring</h2>
+                    <h2 class="mt-3 pt-5 pt-xl-0">Half Cell Potential Surveys</h2>
                     <hr>
                     <p class="pb-5 pb-xl-3 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
@@ -310,7 +377,7 @@
                             <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
                         </a>
                         <div class="col-1"></div>
-                        <a href="#query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
+                        <a href="#half-cell-query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
                             <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
                         </a>
                         <div class="col-1"></div>
@@ -320,7 +387,7 @@
             <!-- right image column (drives the row height) -->
             <div class="d-none service-box-right d-xl-block col-6 px-0 align-content-center">
                 <img
-                src="../assets/images/PrellerProvidedPhotos/Coring/coring-5.jpeg"
+                src="../assets/images/PrellerProvidedPhotos/Half-Cell Potential Surveys/half-cell-potential-surveys-2.jpeg"
                 class="img-fluid h-100 service-image"
                 alt="..."
                 />
@@ -330,77 +397,11 @@
         <!-- Make a Query -->
         <div class="row mt-5 py-5 px-2 px-sm-4 px-md-5 blue-gradient justify-content-center">
             <form class="col-10 col-lg-9 col-xxl-7">
-                <h2 id="query">MAKE A QUERY ABOUT CONCRETE CORING</h2>
+                <h2 id="half-cell-query">MAKE A QUERY ABOUT HALF CELL POTENTIAL SURVEYS</h2>
                 <hr>
                 <div class="form-group">
                     <label for="queryTopic">Topic of Query</label>
-                    <input required type="text" name="" class="form-control" id="queryTopic" value="Concrete Coring">
-                </div>
-                <div class="form-group">
-                    <label for="queryEmail">Your Email address</label>
-                    <input required type="email" name="queryEmail" class="form-control" id="queryEmail">
-                </div>
-                <div class="form-group">
-                    <label for="queryText">Details of Your Query</label>
-                    <textarea required class="form-control" name="queryText" id="queryText" rows="8"></textarea>
-                </div>
-                <div class="row px-2">
-                    <input 
-                        id="query-submit"
-                        type="submit" 
-                        value="Send Request" 
-                        class="btn btn-success mt-3 CIK-button"/>
-                </div>
-            </form>
-        </div>
-    </div>
-    <div class="row justify-content-center service-background pt-5">
-        <div class="col-10 col-lg-9 col-xxl-7 service-box">
-            <div class="row align-items-stretch">
-            <!-- left column split vertically -->
-            <div class="col-12 col-xl-6 px-0 d-flex flex-column">
-                <!-- first half -->
-                <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
-                <div class="text-center px-4 px-md-5">
-                    <h2 class="mt-3 pt-5 pt-xl-0">Concrete Coring</h2>
-                    <hr>
-                    <p class="pb-5 pb-xl-3 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                </div>
-                <!-- second half -->
-                <div class="flex-fill d-flex flex-column white justify-content-center text-center px-4 px-md-5">
-                    <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                    <div class="row justify-content-evenly pb-5 pb-lg-3">
-                        <div class="col-1"></div>
-                        <a href="tel:555-555-5555" class="col-12 btn btn-lg btn-primary CIK-button">
-                            <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
-                        </a>
-                        <div class="col-1"></div>
-                        <a href="#query" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
-                            <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
-                        </a>
-                        <div class="col-1"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- right image column (drives the row height) -->
-            <div class="d-none service-box-right d-xl-block col-6 px-0 align-content-center">
-                <img
-                src="../assets/images/PrellerProvidedPhotos/Coring/coring-5.jpeg"
-                class="img-fluid h-100 service-image"
-                alt="..."
-                />
-            </div>
-            </div>
-        </div>
-        <!-- Make a Query -->
-        <div class="row mt-5 py-5 px-2 px-sm-4 px-md-5 blue-gradient justify-content-center">
-            <form class="col-10 col-lg-9 col-xxl-7">
-                <h2 id="query">MAKE A QUERY ABOUT CONCRETE CORING</h2>
-                <hr>
-                <div class="form-group">
-                    <label for="queryTopic">Topic of Query</label>
-                    <input required type="text" name="" class="form-control" id="queryTopic" value="Concrete Coring">
+                    <input required type="text" name="" class="form-control" id="queryTopic" value="Half Cell Potential Surveys">
                 </div>
                 <div class="form-group">
                     <label for="queryEmail">Your Email address</label>
