fix: optimise images

--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -123,9 +123,9 @@
             </div>
             <div class="d-none service-box-right d-xl-block col-6 px-0 align-content-center">
                 <img
-                src="../assets/images/PrellerProvidedPhotos/Coring/coring-5.jpeg"
+                src="../assets/images/provided-photos/coring/coring-5.webp"
                 class="img-fluid h-100 service-image"
-                alt="..."
+                alt="Concrete coring"
                 />
             </div>
             </div>
@@ -163,9 +163,9 @@
         <div class="row align-items-stretch">
             <div class="d-none d-xl-block col-6 px-0 service-box-right">
             <img
-                src="../assets/images/PrellerProvidedPhotos/Carbonation Testing + Dust Sampling/carb-testing-dust-sampling-1.jpeg"
+                src="../assets/images/provided-photos/carbonation-testing-and-dust-sampling/carb-testing-dust-sampling-1.webp"
                 class="img-fluid h-100 service-image"
-                alt="…"
+                alt="Carbonation testing and dust sampling"
             />
             </div>
             <div class="col-12 col-xl-6 px-0 d-flex flex-column">
@@ -249,9 +249,9 @@
             </div>
             <div class="d-none service-box-right d-xl-block col-6 px-0 align-content-center">
                 <img
-                src="../assets/images/PrellerProvidedPhotos/Breakouts/breakouts-5.jpeg"
+                src="../assets/images/provided-photos/concrete-breakouts/breakouts-5.webp"
                 class="img-fluid h-100 service-image"
-                alt="..."
+                alt="Concrete Breakout Wall"
                 />
             </div>
             </div>
@@ -289,9 +289,9 @@
         <div class="row align-items-stretch">
             <div class="d-none d-xl-block col-6 px-0 service-box-right">
             <img
-                src="../assets/images/view-deserted-decaying-house-nature.jpg"
+                src="../assets/images/deserted-house.webp"
                 class="img-fluid h-100 service-image"
-                alt="…"
+                alt="Deserted house"
             />
             </div>
             <div class="col-12 col-xl-6 px-0 d-flex flex-column">
@@ -375,9 +375,9 @@
             </div>
             <div class="d-none service-box-right d-xl-block col-6 px-0 align-content-center">
                 <img
-                src="../assets/images/PrellerProvidedPhotos/Half-Cell Potential Surveys/half-cell-potential-surveys-2.jpeg"
+                src="../assets/images/provided-photos/half-cell-potential-surveys/half-cell-potential-surveys-2.webp"
                 class="img-fluid h-100 service-image"
-                alt="..."
+                alt="Half Cell Potential Survey Wall"
                 />
             </div>
             </div>
