--- a/contact-us.html
+++ b/contact-us.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta and Title-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Concrete Insight UK</title>
     <link rel="icon" type="image/x-icon" href="/assets//images/s-preller-favicon.png">
+
+    <!-- Scripts and External Assets -->
     <link href="assets/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,18 +37,19 @@
             </button>
         </div>
     </div>
+    <!-- Navbar -->
     <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary p-0 text-uppercase">
         <div class="container-fluid py-0">
             <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item mx-1">
-                        <a class="nav-link active p-3" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link p-3" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown mx-1 hover-underline-animation">
-                    <a class="nav-link dropdown-toggle p-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
+                    <a class="nav-link dropdown-toggle p-3 active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="service-pages/intrusive-investigations.html">Concrete Coring</a></li>
+                        <li><a class="dropdown-item active" href="/service-pages/intrusive-investigations.html">Concrete Coring</a></li>
                         <li><a class="dropdown-item" href="#">Dust Sampling</a></li>
                         <li><a class="dropdown-item" href="#">Conrete Breakouts</a></li>
                         <li><a class="dropdown-item" href="#">Pull Testing</a></li>
@@ -89,10 +93,12 @@
             </div>
         </div>
     </nav>
+
     <!-- Main Page -->
     <div class="contact-us-background">
         <div class="row my-5 justify-content-center">
             <div class="d-block d-xxl-none col-1"></div>
+            <!-- Contact Us Section -->
             <div class="col-10 col-xxl-5 contact-us-box p-3 p-sm-4 p-md-5 text-center">
                 <h2 class="pt-3">CONTACT US</h2>
                 <hr>
@@ -131,6 +137,7 @@
                     or want to know when we can help with your issue, simply submit a query or call us. 
                 </p>
             </div>
+            <!-- Query Section -->
             <div class="col-1"></div>
             <div class="col-10 col-xxl-5 contact-us-box p-3 p-sm-4 p-md-5 mt-5 mt-xxl-0">
                 <h2 id="query" class="pt-3">MAKE A QUERY</h2>
@@ -157,9 +164,9 @@
                     </div>
                 </form>
             </div>
-            <!-- <div class="col-1"></div> -->
         </div>
     </div>
+
     <!-- Map and Footer -->
     <div id="map" class="border-top"></div>
     <footer class="d-flex flex-wrap justify-content-evenly align-items-center py-4 border-top">
