--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta and Title-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Concrete Insight's UK's Home Page">
     <title>Concrete Insight UK</title>
     <link rel="icon" type="image/x-icon" href="/assets//images/s-preller-favicon.png">
+
+    <!-- Scripts and External Assets -->
     <link href="assets/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,18 +34,19 @@
             </button>
         </div>
     </div>
+    <!-- Navbar -->
     <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary p-0 text-uppercase">
         <div class="container-fluid py-0">
             <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item mx-1">
-                        <a class="nav-link active p-3" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link p-3" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown mx-1 hover-underline-animation">
-                    <a class="nav-link dropdown-toggle p-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
+                    <a class="nav-link dropdown-toggle p-3 active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="service-pages/intrusive-investigations.html">Concrete Coring</a></li>
+                        <li><a class="dropdown-item active" href="/service-pages/intrusive-investigations.html">Concrete Coring</a></li>
                         <li><a class="dropdown-item" href="#">Dust Sampling</a></li>
                         <li><a class="dropdown-item" href="#">Conrete Breakouts</a></li>
                         <li><a class="dropdown-item" href="#">Pull Testing</a></li>
@@ -85,6 +90,7 @@
             </div>
         </div>
     </nav>
+
     <!-- Carousel -->
     <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -95,14 +101,14 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-            <img src="assets/images/mesmerizing-view-beautiful-seascape-surrounded-by-greenery.jpg" class="d-block w-100" alt="...">
+            <img src="assets/images/banners/sussex-landscape.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
                 <h5>Investigations, Surveys and Testing in Sussex and beyond.</h5>
                 <p>Some representative placeholder content for the first slide.</p>
             </div>
             </div>
             <div class="carousel-item">
-            <img src="assets/images/site-engineer-construction-site.webp" class="d-block w-100" alt="...">
+            <img src="assets/images//banners/site-engineer-construction-site.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
                 <button type="button" class="btn btn-primary mb-3 CIK-button">Intrusive Investigations</button>
                 <!-- <h5>Professional service for businesses of all sizes</h5> -->
@@ -110,7 +116,7 @@
             </div>
             </div>
             <div class="carousel-item">
-            <img src="assets/images/dark-extensive-stone-hall-abandoned-mine.jpg" class="d-block w-100" alt="...">
+            <img src="assets/images/banners/old-mine.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
                 <button type="button" class="btn btn-success mb-3 CIK-button">Non-Intrusive Surveys</button>
                 <!-- <h5>Open space - or confined access</h5> -->
@@ -118,7 +124,7 @@
             </div>
             </div>
             <div class="carousel-item">
-            <img src="assets/images/worker-with-gloves-holding-protective-glasses.jpg" class="d-block w-100" alt="...">
+            <img src="assets/images/banners/testing.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
                 <button type="button" class="btn btn-danger mb-3 CIK-button">Testing</button>
                 <!-- <h5>Open space - or confined access</h5> -->
@@ -160,7 +166,7 @@
             </div>
             <div class="d-none d-lg-block col-1"></div>
             <div class="d-none d-lg-block col-lg-4 d-flex align-content-center">
-                <img class="small-image" src="assets/images/coring-2.jpeg" alt="Concrete Insight Coring Process">
+                <img class="small-image" src="assets/images//provided-photos/coring/coring-2.webp" alt="Concrete Insight Coring Process">
             </div>
             <div class="col-1"></div>
         </div>
@@ -230,6 +236,7 @@
             </div>
         </div>
     </section>
+
     <!-- Map and Footer -->
     <div id="map" class="border-top"></div>
     <footer class="d-flex flex-wrap justify-content-evenly align-items-center py-4 border-top">
