feat: resolve lighthouse accessibility issues

--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -30,7 +30,7 @@
 <body class="d-flex flex-column min-vh-100">
     <!-- Header -->
     <div class="d-flex justify-content-center py-1" id="nav-header">
-        <a id="site-title" class="navbar-brand fw-bold ms-lg-2 d-inline-block" href="../index.html">CONCRETE • INSIGHT • UK</a>
+        <a id="site-title" class="navbar-brand fw-bold ms-lg-2 d-inline-block" href="../index.html" aria-label="Concrete Insight UK">CONCRETE • INSIGHT • UK</a>
         <div class="navbar ms-5 d-lg-none">
             <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -421,9 +421,9 @@
         </div>
     
         <ul class="nav col-6 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-facebook fa-2xl"></i></li>
-            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-google fa-xl"></i></li>
-            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-instagram fa-2xl"></i></li>
+            <li class="ms-3"><a class="text-muted" href="#" aria-label="Facebook"><i class="fa-brands fa-square-facebook fa-2xl"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="#" aria-label="Google"><i class="fa-brands fa-google fa-xl"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="#" aria-label="Instagram"><i class="fa-brands fa-square-instagram fa-2xl"></i></a></li>
         </ul>
     </footer>
 
