--- a/contact-us.html
+++ b/contact-us.html
@@ -4,6 +4,7 @@
     <!-- Meta and Title-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Concrete Insight's UK's 'Contact Us' Page">
     <title>Concrete Insight UK</title>
     <link rel="icon" type="image/x-icon" href="/assets//images/s-preller-favicon.png">
 
@@ -168,7 +169,7 @@
     </div>
 
     <!-- Map and Footer -->
-    <div id="map" class="border-top"></div>
+    <div id="map"></div>
     <footer class="d-flex flex-wrap justify-content-evenly align-items-center py-4 border-top">
         <div class="col-4 d-flex align-items-center">
         <span class="text-muted">© 2025 Concrete Insight UK
@@ -178,11 +179,12 @@
         </div>
     
         <ul class="nav col-6 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-facebook fa-2xl"></i></li>
-            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-google fa-xl"></i></li>
-            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-instagram fa-2xl"></i></li>
+            <li class="ms-3"><a class="text-muted" href="#" aria-label="Facebook"><i class="fa-brands fa-square-facebook fa-2xl"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="#" aria-label="Google"><i class="fa-brands fa-google fa-xl"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="#" aria-label="Instagram"><i class="fa-brands fa-square-instagram fa-2xl"></i></a></li>
         </ul>
     </footer>
+
     <!-- Post-DOM Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script type="module" src="../assets/js/script.js"></script>
