--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="carousel-item active">
             <img src="assets/images/banners/sussex-landscape.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
-                <h5>Investigations, Surveys and Testing in Sussex and beyond.</h5>
+                <h3 class="h5">Investigations, Surveys and Testing in Sussex and beyond.</h3>
                 <p>Some representative placeholder content for the first slide.</p>
             </div>
             </div>
@@ -111,7 +111,6 @@
             <img src="assets/images//banners/site-engineer-construction-site.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
                 <button type="button" class="btn btn-primary mb-3 CIK-button">Intrusive Investigations</button>
-                <!-- <h5>Professional service for businesses of all sizes</h5> -->
                 <p>Some representative placeholder content for the second slide.</p>
             </div>
             </div>
@@ -119,7 +118,6 @@
             <img src="assets/images/banners/old-mine.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
                 <button type="button" class="btn btn-success mb-3 CIK-button">Non-Intrusive Surveys</button>
-                <!-- <h5>Open space - or confined access</h5> -->
                 <p>Some representative placeholder content for the third slide.</p>
             </div>
             </div>
@@ -127,7 +125,6 @@
             <img src="assets/images/banners/testing.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
                 <button type="button" class="btn btn-danger mb-3 CIK-button">Testing</button>
-                <!-- <h5>Open space - or confined access</h5> -->
                 <p>Some representative placeholder content for the fourth slide.</p>
             </div>
             </div>
@@ -159,9 +156,9 @@
                 </p>
                 <br />
                 <ul class="index-ul text-center">
-                    <li data-inviewport="fade-right"><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 1, this can be a link also</li><br />
-                    <li data-inviewport="fade-right"><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 2, this can be a link also</li><br />
-                    <li data-inviewport="fade-right"><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 3, this can be a link also</li><br />
+                    <li class="mb-3" data-inviewport="fade-right"><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 1, this can be a link also</li>
+                    <li class="mb-3" data-inviewport="fade-right"><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 2, this can be a link also</li>
+                    <li data-inviewport="fade-right"><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 3, this can be a link also</li>
                 </ul>
             </div>
             <div class="d-none d-lg-block col-1"></div>
@@ -178,7 +175,7 @@
                 |<div class="card text-center">
                     <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
                     <div class="card-body">
-                        <h5 class="card-title">Ferroscanning</h5>
+                        <h3 class="card-title h5">Ferroscanning</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
                         <a href="#" class="btn btn-dark">Go somewhere</a>
                     </div>
@@ -188,7 +185,7 @@
                 <div class="card text-center">
                     <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
                     <div class="card-body">
-                        <h5 class="card-title">Ground Penetrating Radar</h5>
+                        <h3 class="card-title h5">Ground Penetrating Radar</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
                         <a href="#" class="btn btn-dark">Go somewhere</a>
                     </div>
@@ -198,7 +195,7 @@
                 |<div class="card text-center">
                     <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
                     <div class="card-body">
-                        <h5 class="card-title">Defect Surveys</h5>
+                        <h3 class="card-title h5">Defect Surveys</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
                         <a href="#" class="btn btn-dark">Go somewhere</a>
                     </div>
@@ -208,7 +205,7 @@
                 |<div class="card text-center">
                     <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
                     <div class="card-body">
-                        <h5 class="card-title">Rebound Hammer Surveys</h5>
+                        <h3 class="card-title h5">Rebound Hammer Surveys</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
                         <a href="#" class="btn btn-dark">Go somewhere</a>
                     </div>
@@ -218,7 +215,7 @@
                 |<div class="card text-center">
                     <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
                     <div class="card-body">
-                        <h5 class="card-title">Petrographic Testing</h5>
+                        <h3 class="card-title h5">Petrographic Testing</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
                         <a href="#" class="btn btn-dark">Go somewhere</a>
                     </div>
@@ -228,7 +225,7 @@
                 |<div class="card text-center">
                     <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
                     <div class="card-body">
-                        <h5 class="card-title">Mixed Mortar Analysis</h5>
+                        <h3 class="card-title h5">Mixed Mortar Analysis</h3>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
                         <a href="#" class="btn btn-dark">Go somewhere</a>
                     </div>
@@ -238,7 +235,7 @@
     </section>
 
     <!-- Map and Footer -->
-    <div id="map" class="border-top"></div>
+    <div id="map"></div>
     <footer class="d-flex flex-wrap justify-content-evenly align-items-center py-4 border-top">
         <div class="col-4 d-flex align-items-center">
         <span class="text-muted">© 2025 Concrete Insight UK
@@ -248,11 +245,12 @@
         </div>
     
         <ul class="nav col-6 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-facebook fa-2xl"></i></li>
-            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-google fa-xl"></i></li>
-            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-instagram fa-2xl"></i></li>
+            <li class="ms-3"><a class="text-muted" href="#" aria-label="Facebook"><i class="fa-brands fa-square-facebook fa-2xl"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="#" aria-label="Google"><i class="fa-brands fa-google fa-xl"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="#" aria-label="Instagram"><i class="fa-brands fa-square-instagram fa-2xl"></i></a></li>
         </ul>
     </footer>
+
     <!-- Post-DOM Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script type="module" src="assets/js/script.js"></script>
